# kist-gearsonic-inference

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  env.sh
config/: config.yaml
docker/: Dockerfile  Dockerfile.dev  build.sh  build_dev.sh  run.sh  run_dev.sh
include/common/: config.hpp  data_buffer.hpp  joint_order.hpp  math_utils.hpp  robot_params.hpp  thread_priority.hpp
include/control/: control_loop.hpp  motor_command.hpp  obs_dict_model.hpp  observation.hpp  policy_decoder.hpp  state_logger.hpp  token_encoder.hpp  whole_body_controller.hpp
include/motion/: input_handler.hpp  movement_state.hpp  nav_command.hpp
include/pico/: pico_vr_body_pose.hpp  pico_vr_controller.hpp  pico_vr_reader.hpp
include/planner/: motion_sequence_50hz.hpp  planner_inference.hpp
include/system/: gearsonic_system.hpp
include/teleop/: g1_arm_fk.hpp  teleop_tracker.hpp  vr_3point.hpp
include/tensorrt/: InferenceEngine.h  Utility.h
include/unitree/: crc32.hpp  hand_command.hpp  hand_command_writer.hpp  imu.hpp  unitree_command_writer.hpp  unitree_state.hpp  unitree_state_reader.hpp
src/: main.cpp
src/control/: control_loop.cpp  obs_dict_model.cpp  observation.cpp  policy_decoder.cpp  token_encoder.cpp  whole_body_controller.cpp
src/motion/: input_handler.cpp
src/pico/: pico_vr_reader.cpp
src/planner/: planner_inference.cpp
src/system/: gearsonic_system.cpp
src/teleop/: g1_arm_fk.cpp  teleop_tracker.cpp
src/tensorrt/: InferenceEngine.cpp
src/unitree/: hand_command_writer.cpp  unitree_command_writer.cpp  unitree_state_reader.cpp
test/: lowcmd_monitor.cpp  release_motion_service.cpp  test_control_dry.cpp  test_control_live.cpp  test_hand_command_writer.cpp  test_input_combo.cpp  test_input_handler.cpp  test_nav_command.cpp  test_obs_dict_model.cpp  test_pico_vr_reader.cpp  test_planner_inference.cpp  test_planner_live.cpp  test_stage_probe.cpp  test_teleop_live.cpp  test_teleop_probe.cpp  test_trt_inference.cpp  test_unitree_state_reader.cpp
